--- a/project.ipynb
+++ b/project.ipynb
@@ -29,11 +29,445 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Firstly, let's print out our data to see sample of records that are there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stag</th>\n",
+       "      <th>event</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>profession</th>\n",
+       "      <th>traffic</th>\n",
+       "      <th>coach</th>\n",
+       "      <th>head_gender</th>\n",
+       "      <th>greywage</th>\n",
+       "      <th>way</th>\n",
+       "      <th>extraversion</th>\n",
+       "      <th>independ</th>\n",
+       "      <th>selfcontrol</th>\n",
+       "      <th>anxiety</th>\n",
+       "      <th>novator</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.030801</td>\n",
+       "      <td>1</td>\n",
+       "      <td>m</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Banks</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>rabrecNErab</td>\n",
+       "      <td>no</td>\n",
+       "      <td>f</td>\n",
+       "      <td>white</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22.965092</td>\n",
+       "      <td>1</td>\n",
+       "      <td>m</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Banks</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>empjs</td>\n",
+       "      <td>no</td>\n",
+       "      <td>m</td>\n",
+       "      <td>white</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15.934292</td>\n",
+       "      <td>1</td>\n",
+       "      <td>f</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>PowerGeneration</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>rabrecNErab</td>\n",
+       "      <td>no</td>\n",
+       "      <td>m</td>\n",
+       "      <td>white</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>8.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15.934292</td>\n",
+       "      <td>1</td>\n",
+       "      <td>f</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>PowerGeneration</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>rabrecNErab</td>\n",
+       "      <td>no</td>\n",
+       "      <td>m</td>\n",
+       "      <td>white</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>6.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.410678</td>\n",
+       "      <td>1</td>\n",
+       "      <td>m</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Commercial</td>\n",
+       "      <td>youjs</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>f</td>\n",
+       "      <td>white</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>3.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        stag  event gender   age         industry  profession      traffic  \\\n",
+       "0   7.030801      1      m  35.0            Banks          HR  rabrecNErab   \n",
+       "1  22.965092      1      m  33.0            Banks          HR        empjs   \n",
+       "2  15.934292      1      f  35.0  PowerGeneration          HR  rabrecNErab   \n",
+       "3  15.934292      1      f  35.0  PowerGeneration          HR  rabrecNErab   \n",
+       "4   8.410678      1      m  32.0           Retail  Commercial        youjs   \n",
+       "\n",
+       "  coach head_gender greywage  way  extraversion  independ  selfcontrol  \\\n",
+       "0    no           f    white  bus           6.2       4.1          5.7   \n",
+       "1    no           m    white  bus           6.2       4.1          5.7   \n",
+       "2    no           m    white  bus           6.2       6.2          2.6   \n",
+       "3    no           m    white  bus           5.4       7.6          4.9   \n",
+       "4   yes           f    white  bus           3.0       4.1          8.0   \n",
+       "\n",
+       "   anxiety  novator  \n",
+       "0      7.1      8.3  \n",
+       "1      7.1      8.3  \n",
+       "2      4.8      8.3  \n",
+       "3      2.5      6.7  \n",
+       "4      7.1      3.7  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"turnover.csv\", encoding = \"ISO-8859-1\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data looks good at the first look, but we can get some more details about it to have overall look."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stag</th>\n",
+       "      <th>event</th>\n",
+       "      <th>age</th>\n",
+       "      <th>extraversion</th>\n",
+       "      <th>independ</th>\n",
+       "      <th>selfcontrol</th>\n",
+       "      <th>anxiety</th>\n",
+       "      <th>novator</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "      <td>1129.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>36.627526</td>\n",
+       "      <td>0.505757</td>\n",
+       "      <td>31.066965</td>\n",
+       "      <td>5.592383</td>\n",
+       "      <td>5.478034</td>\n",
+       "      <td>5.597254</td>\n",
+       "      <td>5.665633</td>\n",
+       "      <td>5.879628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>34.096597</td>\n",
+       "      <td>0.500188</td>\n",
+       "      <td>6.996147</td>\n",
+       "      <td>1.851637</td>\n",
+       "      <td>1.703312</td>\n",
+       "      <td>1.980101</td>\n",
+       "      <td>1.709176</td>\n",
+       "      <td>1.904016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.394251</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>11.728953</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>4.600000</td>\n",
+       "      <td>4.100000</td>\n",
+       "      <td>4.100000</td>\n",
+       "      <td>4.800000</td>\n",
+       "      <td>4.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>24.344969</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>5.400000</td>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>5.700000</td>\n",
+       "      <td>5.600000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>51.318275</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>7.200000</td>\n",
+       "      <td>7.100000</td>\n",
+       "      <td>7.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>179.449692</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>58.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              stag        event          age  extraversion     independ  \\\n",
+       "count  1129.000000  1129.000000  1129.000000   1129.000000  1129.000000   \n",
+       "mean     36.627526     0.505757    31.066965      5.592383     5.478034   \n",
+       "std      34.096597     0.500188     6.996147      1.851637     1.703312   \n",
+       "min       0.394251     0.000000    18.000000      1.000000     1.000000   \n",
+       "25%      11.728953     0.000000    26.000000      4.600000     4.100000   \n",
+       "50%      24.344969     1.000000    30.000000      5.400000     5.500000   \n",
+       "75%      51.318275     1.000000    36.000000      7.000000     6.900000   \n",
+       "max     179.449692     1.000000    58.000000     10.000000    10.000000   \n",
+       "\n",
+       "       selfcontrol      anxiety      novator  \n",
+       "count  1129.000000  1129.000000  1129.000000  \n",
+       "mean      5.597254     5.665633     5.879628  \n",
+       "std       1.980101     1.709176     1.904016  \n",
+       "min       1.000000     1.700000     1.000000  \n",
+       "25%       4.100000     4.800000     4.400000  \n",
+       "50%       5.700000     5.600000     6.000000  \n",
+       "75%       7.200000     7.100000     7.500000  \n",
+       "max      10.000000    10.000000    10.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, the numerical data that desribes employee character like extraversion, anxiety, etc. are normalized in the values range 0 - 10 which is good. Also the 'age' column has values between 18 and 58 which sounds reasonable and makes us sure we have no outliers in the dataset. Column named 'event' has also proper values as it contains probability values for each employee. Now, when we are sure we have no outliers nor any other strange values here, let's see if there are some NaN's.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stag            0\n",
+       "event           0\n",
+       "gender          0\n",
+       "age             0\n",
+       "industry        0\n",
+       "profession      0\n",
+       "traffic         0\n",
+       "coach           0\n",
+       "head_gender     0\n",
+       "greywage        0\n",
+       "way             0\n",
+       "extraversion    0\n",
+       "independ        0\n",
+       "selfcontrol     0\n",
+       "anxiety         0\n",
+       "novator         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now when we are sure that our numerical data are fine, we can take a look at the categorical ones. To make it usefull in our project we should firstly encode its values to make its type numerical. For this we can use `LabelEncoder` from `scikit-learn` library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gender': {'m': 1, 'f': 0}, 'industry': {'Banks': 2, 'PowerGeneration': 8, 'Retail': 10, 'manufacture': 14, 'Consult': 4, 'State': 11, 'etc': 13, 'Building': 3, 'IT': 5, ' HoReCa': 0, 'Telecom': 12, 'Pharma': 7, 'Mining': 6, 'transport': 15, 'Agriculture': 1, 'RealEstate': 9}, 'profession': {'HR': 6, 'Commercial': 2, 'Marketing': 9, 'etc': 13, 'Sales': 11, 'BusinessDevelopment': 1, 'Finanñe': 5, 'Teaching': 12, 'manage': 14, 'IT': 7, 'Law': 8, 'Consult': 3, 'Engineer': 4, 'PR': 10, 'Accounting': 0}, 'traffic': {'rabrecNErab': 4, 'empjs': 2, 'youjs': 7, 'referal': 6, 'advert': 1, 'KA': 0, 'recNErab': 5, 'friends': 3}, 'coach': {'no': 1, 'yes': 2, 'my head': 0}, 'head_gender': {'f': 0, 'm': 1}, 'greywage': {'white': 1, 'grey': 0}, 'way': {'bus': 0, 'car': 1, 'foot': 2}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "encoding_map = {}\n",
+    "for col in df.columns:\n",
+    "    if df[col].dtype == 'object':\n",
+    "        labels = df[col].unique()\n",
+    "        \n",
+    "        encoder = LabelEncoder()\n",
+    "        encoder = encoder.fit(df[col])\n",
+    "        df[col] = encoder.transform(df[col].astype(str))\n",
+    "        \n",
+    "        map_column_values = {label: num for label, num in zip(labels, encoder.transform(labels))}\n",
+    "        encoding_map[col] = map_column_values\n",
+    "\n",
+    "print(encoding_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the dataset is fully ready to use in our modelling. We can also see the encoding map placed above to know which number represents which label in the original data. It will help us in better interpretation of the received results in the future. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,8 +541,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "adv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
