add models definition and description

--- a/project.ipynb
+++ b/project.ipynb
@@ -99,7 +99,7 @@
     "   - **Weibull Model:** Generalizes the exponential model by allowing the hazard function to vary over time, providing more flexibility.\n",
     "   - **Log-Normal and Log-Logistic Models:** Useful for modeling survival times with a particular skewed distribution.\n",
     "\n",
-    "In our project, as we are focused on parametric models, we decided to do such analysis using [Weibull distribution](https://en.wikipedia.org/wiki/Weibull_distribution)."
+    "In our project, as we are focused on parametric and semi-parametric models, we decided to do such analysis using [Weibull distribution](https://en.wikipedia.org/wiki/Weibull_distribution)."
    ]
   },
   {
@@ -1109,7 +1109,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **3. Model**"
+    "## **3. Model**\n",
+    "\n",
+    "Survival models come in two main flavors, parametric and semi-parametric. In a parametric model, the survival time of a subject is modeled explicitly using a parametric probability distribution. There is a great deal of flexibility in how the parametric probability distribution is constructed. Rather than explicitly modeling a parametric survival probability, semi-parametric survival models instead model the relative effect on survival of covariates.\n",
+    "\n",
+    "In the Survival Analysis very common behaviour is to analyze influence of the covariates on the model's prediction. In an employee turnover problem, covariates could include a variety of factors that might impact the likelihood of an employee leaving the company, such as employee's age, gender, psycholigical factors and so on.\n",
+    "\n",
+    "That is why we decided to create in our project two separate models, parametric and semi-parametric one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3.1. Weibull Model without Covariates**\n",
+    "\n",
+    "This model only includes the shape parameter ($ k $) and scale parameter ($ \\lambda $) of the Weibull distribution. It assumes that the survival times are only influenced by the Weibull distribution parameters and not by any covariates.\n",
+    "\n",
+    "The survival function $ S(t) $, probability density function $ f(t | k, \\lambda) $ and the hazard function $ h(t) $ for the Weibull distribution without covariates are:\n",
+    "\n",
+    "$ f(t | k, \\lambda) = \\frac{k}{\\lambda} \\left(\\frac{t}{\\lambda}\\right)^{k-1} e^{-\\left(\\frac{t}{\\lambda}\\right)^k} $\n",
+    "\n",
+    "$ S(t | k, \\lambda) = e^{-\\left(\\frac{t}{\\lambda}\\right)^{k}} $\n",
+    "\n",
+    "$ h(t | k, \\lambda) = \\frac{k}{\\lambda}\\left(\\frac{t}{\\lambda}\\right)^{k - 1} $\n",
+    "\n",
+    "**Parameters**\n",
+    "\n",
+    "- $ k $: Shape parameter\n",
+    "- $ \\lambda $: Scale parameter\n",
+    "\n",
+    "**Required Data**\n",
+    "\n",
+    "- $ \\text{target} $: Survival times (continuous)\n",
+    "- $ \\text{censor} $: Censoring indicators (0 for observed, 1 for censored)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3.2. Weibull Model with Covariates**\n",
+    "\n",
+    "This model includes the shape parameter ($ k $), the scale parameter ($ \\lambda $), and the regression coefficients ($ \\theta $). It assumes that the survival times are influenced not only by the Weibull distribution parameters but also by covariates.\n",
+    "\n",
+    "In this model, the scale parameter $ \\lambda $ is modified by the covariates through a linear predictor $ \\eta $:\n",
+    "\n",
+    "$ \\eta = X \\theta $\n",
+    "\n",
+    "where $ X $ is the matrix of covariates and $ \\theta $ is the vector of regression coefficients. The survival, probability density and hazard functions become:\n",
+    "\n",
+    "$ \\lambda_i = e^{X_i \\theta} $\n",
+    "\n",
+    "$ S(t_i | k, \\lambda_i) = e^{-\\left(\\frac{t_i}{\\lambda_i}\\right)^{k}} $\n",
+    "\n",
+    "$ f(t_i | k, \\lambda_i) = \\frac{k}{\\lambda_i} \\left(\\frac{t_i}{\\lambda_i}\\right)^{k-1} e^{-\\left(\\frac{t_i}{\\lambda_i}\\right)^k} $\n",
+    "\n",
+    "$ h(t_i | k, \\lambda_i) = \\frac{k}{\\lambda_i}\\left(\\frac{t_i}{\\lambda_i}\\right)^{k - 1} $\n",
+    "\n",
+    "**Parameters**\n",
+    "\n",
+    "- $ k $: Shape parameter\n",
+    "- $ \\theta $: Regression coefficients (vector of length $ K $, where $ K $ is the number of covariates)\n",
+    "\n",
+    "**Required Data**\n",
+    "\n",
+    "- $ X $: Covariate matrix (dimensions $ N \\times K $)\n",
+    "- $ \\text{target} $: Survival times (continuous)\n",
+    "- $ \\text{censor} $: Censoring indicators (0 for observed, 1 for censored)\n"
    ]
   },
   {
